RESOLVED FIXED71746
DFG code base should allow for classes not related to DFG::JITCompiler to use DFG idioms
https://bugs.webkit.org/show_bug.cgi?id=71746
Summary DFG code base should allow for classes not related to DFG::JITCompiler to use...
Filip Pizlo
Reported 2011-11-07 16:25:04 PST
patch forthcoming
Attachments
the patch (45.40 KB, patch)
2011-11-07 16:28 PST, Filip Pizlo
no flags
the patch (45.40 KB, patch)
2011-11-07 16:32 PST, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2011-11-07 16:28:06 PST
Created attachment 113951 [details] the patch
WebKit Review Bot
Comment 2 2011-11-07 16:30:20 PST
Attachment 113951 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:35: Alphabetical sorting problem. [build/include_order] [4] Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:171: Missing space inside { }. [whitespace/braces] [5] Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:172: Missing space inside { }. [whitespace/braces] [5] Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:173: Missing space inside { }. [whitespace/braces] [5] Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:174: Missing space inside { }. [whitespace/braces] [5] Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:175: Missing space inside { }. [whitespace/braces] [5] Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:224: The parameter name "flag" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 7 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2011-11-07 16:32:52 PST
Created attachment 113952 [details] the patch Fixed style.
Gavin Barraclough
Comment 4 2011-11-07 18:27:16 PST
Comment on attachment 113952 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=113952&action=review > Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:46 > +class AssemblyHelpers: public MacroAssembler { I think you're missing a space here.
Filip Pizlo
Comment 5 2011-11-07 18:59:38 PST
(In reply to comment #4) > (From update of attachment 113952 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=113952&action=review > > > Source/JavaScriptCore/dfg/DFGAssemblyHelpers.h:46 > > +class AssemblyHelpers: public MacroAssembler { > > I think you're missing a space here. i.e. "AssemblyHelpers : public" instead of "AssemblyHelpers: public"?
Filip Pizlo
Comment 6 2011-11-07 21:51:57 PST
Filip Pizlo
Comment 7 2011-11-07 21:53:13 PST
Note You need to log in before you can comment on or make changes to this bug.